# pytreeprint

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.txt  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml
pytreemap/: __init__.py  tree.py
pytreemap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pytreeprint/: __init__.py  cli.py  tree.py  types.py  utils.py
pytreeprint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: tree.py
src/pytreeprint/: __init__.py  __main__.py  cli.py  tree.py  types.py  utils.py
tests/: conftest.py  test_formatting.py  test_tree.py
